--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,39 +7,44 @@
   <title>Task Manager</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+<link rel="stylesheet" href="../../public/css/style.css">
 </head>
 
 <body>
   <section class="hero is-dark is-bold">
     <div class="hero-body">
       <div class="container">
-        <nav class="navbar">
-          <div class="navbar-brand">
-            <h1 class="navbar-item">
-              <a href="/" class="title has-text-light">Task Manager</a>
-            </h1>
-            <span class="navbar-burger burger has-text-light" id="nav-toggle">
-              <span></span>
-              <span></span>
-              <span></span>
-            </span>
-          </div>
-          <div class="navbar-menu" id="navbar-menu">
-            <div class="navbar-end">
-              <div class="navbar-item">
-                {{#if logged_in}}
-                <div class="buttons">
-                  <button id="logout" class="button is-light">Logout</button>
-                </div>
-                <p class="has-text-light">{{email}}</p>
-                {{else}}
-                <a href="/login" class="button is-light">Login</a>
-                {{/if}}
-              </div>
-              <div class="navbar-item">
-                <button id="dark-mode-toggle" class="button is-light">Dark Mode</button>
-              </div>
-            </div>
+  
+<nav class="navbar">
+  <div class="navbar-brand">
+    <h1 class="navbar-item">
+      <a href="/" class="title has-text-light">Task Manager</a>
+    </h1>
+    <span class="navbar-burger burger has-text-light" id="nav-toggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </span>
+  </div>
+  <div class="navbar-end">
+    {{#if logged_in}}
+    <div class="navbar-item">
+      <div class="buttons">
+        <button id="logout" class="button is-light">Logout</button>
+      </div>
+    </div>
+    <div class="navbar-item">
+      <p class="has-text-light">{{email}}</p>
+    </div>
+    {{else}}
+    <div class="navbar-item">
+      <button id="dark-mode-toggle" class="button is-light">Dark Mode</button>
+    </div>
+    {{/if}}
+  </div>
+</nav>
+</nav>
+
           </div>
         </nav>
       </div>
@@ -55,7 +60,7 @@
 
   <footer class="footer">
     <div class="content has-text-centered">
-      <p class="has-text-light">
+      <p class="has-text-primary">
         Task Manager &copy; 2024. All rights reserved.
       </p>
     </div>
