--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,8 +6,11 @@
 
 
 <div id="btns">
-  <div class="cntr">
+  <div class="cntr homeBtns">
     <a href="/api/tasks"><button class="button is-link is-large is-rounded taskbtn2" type="button" data-bs-dismiss="modal">Add new task</button></a>
+  </div>
+  <div class="cntr homeBtns">
+    <a href="/all"><button class="button is-link is-large is-rounded taskbtn2" type="button" data-bs-dismiss="modal">All tasks</button></a>
   </div>
   <div class="cntr2">
     <a href="/pending"><button class="button is-info is-large is-rounded taskbtn" type="button" data-bs-dismiss="modal">Pending</button></a>
