applied update status and priority dynamically on the page for editing task

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -38,7 +38,7 @@
                                             <button class="button is-primary" onclick="window.location.href='register'">Sign Up</button>
                                     </div>
                                     <p>Or sign in using:</p>
-                                    <button class="button is-info">Google</button>
+                                    <button id="google-login-button" class="button is-info">Google</button>
                                 </div>
                             </div>
                         </div>
