--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -38,7 +38,10 @@
     </div>
     {{else}}
     <div class="navbar-item">
-      <button id="dark-mode-toggle" class="button is-light">Dark Mode</button>
+       <div class="cntr homeBtns">
+    <a href="/">
+  <button class="button is medium is-rounded" type="button" data-bs-dismiss="modal">Home</button>
+</a>
     </div>
     {{/if}}
   </div>
