--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 <link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+<script>
+  $( function() {
+    $( ".datepicker" ).datepicker();
+  } );
+  </script>
 </head>
 
 <body>
@@ -30,7 +38,7 @@
     {{#if logged_in}}
     <div class="navbar-item">
       <div class="buttons">
-        <button id="logout" class="button is-light">Logout</button>
+        <button id="logout" class="button is-light is-rounded">Logout</button>
       </div>
     </div>
     <div class="navbar-item">
@@ -38,7 +46,7 @@
     </div>
     {{else}}
     <div class="navbar-item">
-      <button id="dark-mode-toggle" class="button is-light">Dark Mode</button>
+      <button id="dark-mode-toggle" class="button is-light is-rounded">Dark Mode</button>
     </div>
     {{/if}}
   </div>
