--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -28,17 +28,17 @@
                                         </div>
                                         <div class="field">
                                             <div class="control">
-                                                <button class="button is-primary" type="submit">Submit</button>
+                                                <button class="button is-primary is-rounded" type="submit">Submit</button>
                                             </div>
                                         </div>
                                     </form>
                                     <div>
                                         <p>Click to Sign up</a> if you don't
                                             have an account.</p>
-                                            <button class="button is-primary" onclick="window.location.href='register'">Sign Up</button>
+                                            <button class="button is-primary is-rounded" onclick="window.location.href='register'">Sign Up</button>
                                     </div>
                                     <p>Or sign in using:</p>
-                                    <button class="button is-info">Google</button>
+                                    <button class="button is-info is-rounded">Google</button>
                                 </div>
                             </div>
                         </div>
