--- a/views/completed.handlebars
+++ b/views/completed.handlebars
@@ -1,5 +1,5 @@
 {{#if logged_in}}
-<h1 class="task-status">Completed Tasks</h1>
+<h1 class="task-type">Completed Tasks</h1>
 <div class="card task-card">
 <table class="table is-bordered is-striped is-hoverable is-fullwidth">
     <thead>
