--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,10 +22,6 @@ body {
     margin-bottom: 1rem;
 }
 
-.task-status {
-    font-weight: bold;
-}
-
 .update-status {
     margin-top: 1rem;
 }
@@ -122,7 +118,7 @@ h4 {
 
 /* Task pages */
 
-.task-status {
+.task-type {
     font-family: Helvetica, Arial, sans-serif;
     font-size: 34px;
     font-weight: bold;
@@ -154,4 +150,8 @@ h4 {
 
 .date p {
     font-weight: bold;
+}
+
+.display-card {
+
 }
