--- a/views/inprogress.handlebars
+++ b/views/inprogress.handlebars
@@ -1,5 +1,5 @@
 {{#if logged_in}}
-<h1 class="task-status">In-progress Tasks</h1>
+<h1 class="task-type">In-progress Tasks</h1>
 <div class="card task-card">
 <table class="table is-bordered is-striped is-hoverable is-fullwidth">
     <thead>
