--- a/views/tasks.handlebars
+++ b/views/tasks.handlebars
@@ -1,71 +1,71 @@
 {{#if logged_in}}
-  <div class="tasks-container">
-    <div class="modal-content">
-      <button id="showFormBtn" class="button is-primary is-rounded">Add New Task</button>
-      <div class="box" id="taskFormContainer" style="display: none;">
-        <h2 class="title is-4">New Task</h2>
-        <form id="addTaskForm">
-          <div class="field">
-            <label class="label">Task Name</label>
-            <div class="control">
-              <input class="input" type="text" name="title" placeholder="Enter task name" required>
-            </div>
+<div class="tasks-container">
+  <div class="modal-content">
+    <button id="showFormBtn" class="button is-primary is-rounded">Add New Task</button>
+    <div class="box" id="taskFormContainer" style="display: none;">
+      <h2 class="title is-4">New Task</h2>
+      <form id="addTaskForm">
+        <div class="field">
+          <label class="label">Task Name</label>
+          <div class="control">
+            <input class="input" type="text" name="title" placeholder="Enter task name" required>
           </div>
-          <div class="field">
-            <label class="label">Description</label>
-            <div class="control">
-              <textarea class="textarea" name="description" placeholder="Enter task description" required></textarea>
-            </div>
+        </div>
+        <div class="field">
+          <label class="label">Description</label>
+          <div class="control">
+            <textarea class="textarea" name="description" placeholder="Enter task description" required></textarea>
           </div>
-          <div class="date">
-            <p>Start date: <input type="text" class="datepicker" id="start-date"></p>
-            <p>Due date: <input type="text" class="datepicker" id="due-date"></p>
+        </div>
+        <div class="date">
+          <p>Start date: <input type="text" class="datepicker" id="start-date"></p>
+          <p>Due date: <input type="text" class="datepicker" id="due-date"></p>
+        </div>
+        <div class="field is-grouped">
+          <div class="control">
+            <button id="addBtn" class="button is-primary is-rounded" type="submit">Add Task</button>
           </div>
-          <div class="field is-grouped">
-            <div class="control">
-              <button id="addBtn" class="button is-primary is-rounded" type="submit">Add Task</button>
-            </div>
-            <div class="control">
-              <button id="cancelBtn" class="button is-danger is-rounded" type="button">Cancel</button>
-            </div>
+          <div class="control">
+            <button id="cancelBtn" class="button is-danger is-rounded" type="button">Cancel</button>
           </div>
-        </form>
-      </div>
-    </div>
-
-    <div class="tasks-list">
-{{#each tasks}}
-<div class="box mt-5" data-task-id="{{this.id}}">
-    <h2 class="title is-3">{{this.title}}</h2>
-    <p>Status: <span class="task-status">{{this.status}}</span></p>
-    <p>Priority: {{this.priority}}</p>
-    <p>Start Date: {{format_date this.start_date}}</p>
-    <p>Due Date: {{format_date this.due_date}}</p>
-    <p>Description: {{this.description}}</p>
-    <div class="update-status">
-       <form action="/api/tasks/{{this.id}}" method="POST" class="update-status-form">
-    <label for="status-select-{{this.id}}">Update Status:</label>
-    <select id="status-select-{{this.id}}" name="status">
-        <option value="pending">Pending</option>
-        <option value="in progress">In Progress</option>
-        <option value="completed">Completed</option>
-    </select>
-    <button class="update-status-button button is-link" type="submit">Update Status</button>
-</form>
-
-<form action="/api/tasks/{{this.id}}" method="POST" class="update-priority-form">
-    <label for="priority-select-{{this.id}}">Update Priority:</label>
-    <select id="priority-select-{{this.id}}" name="priority">
-        <option value="high">High</option>
-        <option value="medium">Medium</option>
-        <option value="low">Low</option>
-    </select>
-    
-</form>
-    </div>
-    <button class="delete-task button is-danger">Delete</button>
-</div>
-{{/each}}
+        </div>
+      </form>
     </div>
   </div>
+
+  <div class="tasks-list">
+    {{#each tasks}}
+    <div class="box mt-5 display-card" data-task-id="{{this.id}}">
+      <h2 class="title is-3">{{this.title}}</h2>
+      <p>Status: <span class="task-status">{{this.status}}</span></p>
+      <p>Priority: {{this.priority}}</p>
+      <p>Start Date: {{format_date this.start_date}}</p>
+      <p>Due Date: {{format_date this.due_date}}</p>
+      <p>Description: {{this.description}}</p>
+      <div class="update-status">
+        <form action="/api/tasks/{{this.id}}" method="POST" class="update-status-form">
+          <label for="status-select-{{this.id}}">Update Status:</label>
+          <select id="status-select-{{this.id}}" name="status">
+            <option value="pending">Pending</option>
+            <option value="in progress">In Progress</option>
+            <option value="completed">Completed</option>
+          </select>
+          <button class="update-status-button button is-link is-rounded" type="submit">Update Status</button>
+        </form>
+
+        <form action="/api/tasks/{{this.id}}" method="POST" class="update-priority-form">
+          <label for="priority-select-{{this.id}}">Update Priority:</label>
+          <select id="priority-select-{{this.id}}" name="priority">
+            <option value="high">High</option>
+            <option value="medium">Medium</option>
+            <option value="low">Low</option>
+          </select>
+        </form>
+
+      </div>
+      <button class="delete-task button is-danger is-rounded">Delete</button>
+    </div>
+    {{/each}}
+  </div>
+</div>
 {{/if}}
