pulling new changes

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,6 +5,21 @@
 </div> 
 
 
+<style>
+  #btns {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .cntr,
+  .cntr2 {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px; /* Adjust as needed */
+  }
+</style>
+
 <div id="btns">
   <div class="cntr homeBtns">
     <a href="/api/tasks"><button class="button is-link is-large is-rounded taskbtn2" type="button" data-bs-dismiss="modal">Add new task</button></a>
