--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -73,6 +73,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
   <script src="/js/logout.js"></script>
   <script src="/js/tasks.js"></script>
+  <script src="../../public/css/style.css"></script>
 
 </body>
 
