username show every page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div class="navbar-item">
-      <p class="has-text-light">{{email}}</p>
+      <p class="has-text-light">{{username}}</p>
     </div>
     {{else}}
     <div class="navbar-item">
