added max char length to description field

--- a/views/tasks.handlebars
+++ b/views/tasks.handlebars
@@ -14,7 +14,7 @@
         <div class="field">
           <label class="label">Description</label>
           <div class="control">
-            <textarea class="textarea" name="description" placeholder="Enter task description" required></textarea>
+            <textarea maxlength="255" class="textarea" name="description" placeholder="Enter task description (max length: 255 characters)" required></textarea>
           </div>
         </div>
         <div class="date">
