added required attr. to date field

--- a/views/tasks.handlebars
+++ b/views/tasks.handlebars
@@ -18,8 +18,8 @@
           </div>
         </div>
         <div class="date">
-          <p>Start date: <input type="text" class="datepicker" id="start-date"></p>
-          <p>Due date: <input type="text" class="datepicker" id="due-date"></p>
+          <p>Start date: <input type="text" class="datepicker" id="start-date" required></p>
+          <p>Due date: <input type="text" class="datepicker" id="due-date" required></p>
         </div>
         <div class="field is-grouped">
           <div class="control">
