--- a/views/alltasks.handlebars
+++ b/views/alltasks.handlebars
@@ -3,7 +3,7 @@
 <div class="card task-card">
 <table class="table is-bordered is-striped is-hoverable is-fullwidth">
     <thead>
-        <tr class="is-info">
+        <tr class="is-infoZ">
             <th>Id</th>
             <th>Title</th>
             <th>Description</th>
