--- a/views/pending.handlebars
+++ b/views/pending.handlebars
@@ -18,7 +18,7 @@
     {{#ifEquals status "pending"}}
 
     <tbody>
-        <tr class="taskList pending-table">
+        <tr class="taskList pending-table style=background-color: #67c598;">
             <th>{{id}}</th>
             <td>{{title}}</td>
             <td>{{description}}</td>
