--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="columns is-centered">
                 <div class="column is-4">
-                    <div class="card">
+                    <div class="card" style="background-color: #9997a2;" >
                         <header class="card-header">
                             <p class="card-header-title has-text-centered">
                                 Register
@@ -33,15 +33,15 @@
                                         </div>
                                         <div class="field">
                                             <div class="control">
-                                                <button class="button is-primary" type="submit">Submit</button>
+                                                <button class="button is-primary is-rounded" type="submit">Submit</button>
                                             </div>
                                         </div>
                                     </form>
                                     <div>
-                                        <p>Already have an account? <a href="/login">Log in</a>.</p>
+                                    
                                     </div>
-                                    <p>Or sign up using:</p>
-                                    <button class="button is-info">Google</button>
+                                    <p style="color: white;">Or sign in using:</p>
+                                    <button class="button is-info is-rounded rainbow-effect ">Google</button>
                                 </div>
                             </div>
                         </div>
