--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,8 @@
 {{#if logged_in}}
 
 <div class="container-1">
-<h1 id="my-task">My Tasks</h1> 
+<h1 class="glow" id="my-task">My Tasks</h1>
+
 </div> 
 
 
