pushing up googlefiles

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -36,7 +36,7 @@
     </div>
                              <p style="color: white;">Or sign in using:</p>
 
-                                    <button class="button is-info is-rounded rainbow-effect ">Google</button>
+                                    <button id="signinButton" class="button is-info is-rounded rainbow-effect ">Google</button>
                                 </div>
                             </div>
                         </div>
