--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,10 +2,10 @@
     <section class="section">
         <div class="container"> 
             <div class="columns is-centered">
-                <div class="column is-4">
+                <div class="column is-6">
                     <div class="card" style="background-color: #67c598;" >
                         <header class="card-header">
-                            <p class="card-header-title has-text-centered">
+                            <p class="card-header-title is-centered has-text-centered">
                                 Log In
                             </p>
                         </header>
@@ -36,7 +36,9 @@
     </div>
                              <p style="color: white;">Or sign in using:</p>
 
-                                    <button class="button is-info is-rounded rainbow-effect ">Google</button>
+                                    <button class="button is-info is-rounded rainbow-effect">
+  <img src="https://www.gstatic.com/images/branding/googlelogo/svg/googlelogo_clr_74x24px.svg" alt="Google Icon">
+</button>
                                 </div>
                             </div>
                         </div>
