--- a/views/tasks.handlebars
+++ b/views/tasks.handlebars
@@ -1,7 +1,12 @@
 {{#if logged_in}}
 <div class="tasks-container">
   <div class="modal-content">
+    <div class="field">
+  <div class="control has-text-centered">
     <button id="showFormBtn" class="button is-primary is-rounded">Add New Task</button>
+  </div>
+</div>
+
     <div class="box" id="taskFormContainer" style="display: none;">
       <h2 class="title is-4">New Task</h2>
       <form id="addTaskForm">
@@ -22,9 +27,12 @@
           <p>Due date: <input type="text" class="datepicker" id="due-date" required></p>
         </div>
         <div class="field is-grouped">
-          <div class="control">
-            <button id="addBtn" class="button is-primary is-rounded" type="submit">Add Task</button>
-          </div>
+          <div class="field is-grouped is-grouped-centered">
+  <div class="control">
+    <button id="addBtn" class="button is-primary is-rounded" type="submit">Add Task</button>
+  </div>
+</div>
+
           <div class="control">
             <button id="cancelBtn" class="button is-danger is-rounded" type="button">Cancel</button>
           </div>
