--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -36,7 +36,7 @@
     </div>
                              <p style="color: white;">Or sign in using:</p>
 
-                                    <button class="button is-info is-rounded rainbow-effect">
+                                    <button class="button is-info is-large is-size-3 is-rounded rainbow-effect">
   <img src="https://www.gstatic.com/images/branding/googlelogo/svg/googlelogo_clr_74x24px.svg" alt="Google Icon">
 </button>
                                 </div>
