last css update

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -17,7 +17,7 @@
   .cntr2 {
     display: flex;
     justify-content: center;
-    margin-bottom: 10px; /* Adjust as needed */
+    margin-bottom: 10px; 
   }
 </style>
 
