--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,7 @@
         <div class="container"> 
             <div class="columns is-centered">
                 <div class="column is-6">
-                    <div class="card" style="background-color: #67c598;" >
+                    <div class="card" style="background-color:hsla(0, 0%, 13%, 1)" >
                         <header class="card-header">
                             <p class="card-header-title is-centered has-text-centered">
                                 Log In
@@ -28,10 +28,10 @@
                                         </div>
                                         <div class="field is-grouped">
         <p class="control" >
-            <button class="button is-primary is-normal is-rounded" style= " background-color: #dfe8db;" type="submit">Submit</button>
+            <button class="button is-primary is-normal is-rounded" style= " background-color: #296fa8;" type="submit">Submit</button>
         </p>
         <p class="control">
-            <button class="button is-primary is-normal is-rounded" style= " background-color: #dfe8db;" onclick="window.location.href='register'">Sign Up</button>
+            <button class="button is-primary is-normal is-rounded" style= " background-color: #296fa8;" onclick="window.location.href='register'">Sign Up</button>
         </p>
     </div>
                              <p style="color: white;">Or sign in using:</p>
