--- a/public/css/style.css
+++ b/public/css/style.css
@@ -330,14 +330,33 @@ html, body {
   }
   
   .button.is-info {
-    background-color: rgba(146, 206, 255, 0); /* Adjust the alpha value as needed */
+    background-color: transparent;
+
     border-color: transparent;
     color: #fff;
 }
 
 .button.is-info.is-hovered, .button.is-info:hover {
-    background-color: hsl(208, 8%, 64%); 
-    border-color: transparent;
-    color: #fae6e6;
+    .button.is-info {
+    background-color: transparent;
+    border-color: transparent   ;
+    color: transparent;
+}
     
+
+    .title-spacing {
+        margin-bottom: 20px;
+    }
+}
+
+.title:not(.is-spaced):has(+.subtitle) {
+    margin-bottom: 42px;
+}
+.table thead {
+    background-color: green;
+}
+
+.table.is-fullwidth {
+    width: 100%;
+    background-color: green;
 }
