--- a/public/css/style.css
+++ b/public/css/style.css
@@ -330,8 +330,8 @@ html, body {
   }
   
   .button.is-info {
-    background-color: #485fc7;
-    border-color: #485fc7;
+    background-color: transparent;
+    border-color: transparent;
     color: #fff;
 }
 
